--- a/taskmaster/src/main/resources/templates/change-password.html
+++ b/taskmaster/src/main/resources/templates/change-password.html
@@ -9,7 +9,8 @@
               th:action="@{/users/change-password}"
               th:object="${changePasswordData}">
             <div class="mb-4">
-                <label th:for="currentPassword" class="block text-black text-sm font-medium mb-2">Current password</label>
+                <label th:for="currentPassword" class="block text-black text-sm font-medium mb-2">Current
+                    password</label>
                 <input th:field="*{currentPassword}"
                        required minlength="5" maxlength="15"
                        type="password" id="currentPassword" name="currentPassword"
@@ -17,7 +18,7 @@
                        class="w-full px-3 py-2  border rounded-lg focus:outline-none focus:ring focus:ring-primary"/>
                 <div th:errors="*{currentPassword}"
                      class="text-sm text-destructive">
-                    <p>Password length must be between 2 and 15 symbols!</p>
+                    <p>Current password error message</p>
                 </div>
             </div>
             <div class="mb-4">
@@ -29,16 +30,12 @@
                        class="w-full px-3 py-2  border rounded-lg focus:outline-none focus:ring focus:ring-primary"/>
                 <div th:errors="*{newPassword}"
                      class="text-sm text-destructive">
-                    <p>Password length must be between 2 and 15 symbols!</p>
-                </div>
-                <div th:unless="${#fields.hasErrors('newPassword') || #fields.hasErrors('confirmPassword')}"
-                     th:errors="global"
-                     class="text-sm text-destructive">
-                    <p>Password length must be between 2 and 15 symbols!</p>
+                    <p>New password error message</p>
                 </div>
             </div>
             <div class="mb-6">
-                <label th:for="confirmPassword" class="block text-black text-sm font-medium mb-2">Confirm Password</label>
+                <label th:for="confirmPassword" class="block text-black text-sm font-medium mb-2">Confirm
+                    Password</label>
                 <input th:field="*{confirmPassword}"
                        required minlength="5" maxlength="15"
                        type="password" id="confirmPassword" name="confirmPassword"
@@ -46,12 +43,7 @@
                        class="w-full px-3 py-2  border rounded-lg focus:outline-none focus:ring focus:ring-primary"/>
                 <div th:errors="*{confirmPassword}"
                      class="text-sm text-destructive">
-                    <p>Password length must be between 2 and 15 symbols!</p>
-                </div>
-                <div th:errors="global"
-                     th:unless="${#fields.hasErrors('newPassword') || #fields.hasErrors('confirmPassword')}"
-                     class="text-sm text-destructive">
-                    <p>Password length must be between 2 and 15 symbols!</p>
+                    <p>Confirm password error message</p>
                 </div>
             </div>
             <button type="submit"
