--- a/taskmaster/src/main/resources/templates/register.html
+++ b/taskmaster/src/main/resources/templates/register.html
@@ -18,7 +18,7 @@
                        class="w-full px-3 py-2  border rounded-lg focus:outline-none focus:ring focus:ring-primary"/>
                 <div th:errors="*{username}"
                      class="text-sm text-destructive">
-                    <p>Username length must be between 5 and 15 symbols!</p>
+                    <p>User username error message</p>
                 </div>
             </div>
             <div class="mb-4">
@@ -30,7 +30,7 @@
                        class="w-full px-3 py-2  border rounded-lg focus:outline-none focus:ring focus:ring-primary"/>
                 <div th:errors="*{fullName}"
                      class="text-sm text-destructive">
-                    <p>Full name length must be between 5 and 20 symbols!</p>
+                    <p>User full name error message</p>
                 </div>
             </div>
             <div class="mb-4">
@@ -42,7 +42,7 @@
                        class="w-full px-3 py-2  border rounded-lg focus:outline-none focus:ring focus:ring-primary"/>
                 <div th:errors="*{email}"
                      class="text-sm text-destructive">
-                    <p>Enter valid email</p>
+                    <p>User email error message</p>
                 </div>
             </div>
             <div class="mb-4">
@@ -53,7 +53,7 @@
                        class="w-full px-3 py-2  border rounded-lg focus:outline-none focus:ring focus:ring-primary"/>
                 <div th:errors="*{age}"
                      class="text-sm text-destructive">
-                    <p>Age must be positive</p>
+                    <p>User age error message</p>
                 </div>
             </div>
             <div class="mb-4">
@@ -65,7 +65,7 @@
                        class="w-full px-3 py-2  border rounded-lg focus:outline-none focus:ring focus:ring-primary"/>
                 <div th:errors="*{password}"
                      class="text-sm text-destructive">
-                    <p>Password length must be between 2 and 15 symbols!</p>
+                    <p>User password error message</p>
                 </div>
             </div>
             <div class="mb-6">
@@ -78,7 +78,7 @@
                        class="w-full px-3 py-2  border rounded-lg focus:outline-none focus:ring focus:ring-primary"/>
                 <div th:errors="*{confirmPassword}"
                      class="text-sm text-destructive">
-                    <p>Password length must be between 2 and 15 symbols!</p>
+                    <p>User confirm password error message</p>
                 </div>
             </div>
             <div class="flex flex-col items-center justify-center w-full h-full mt-2 mb-6 ">
