--- a/taskmaster/src/main/resources/templates/contacts.html
+++ b/taskmaster/src/main/resources/templates/contacts.html
@@ -28,7 +28,7 @@
                            required/>
                     <div th:errors="*{title}"
                          class="text-sm text-destructive">
-                        <p>Password length must be between 2 and 15 symbols!</p>
+                        <p>Title error message</p>
                     </div>
                 </div>
                 <div>
@@ -38,7 +38,7 @@
                            required/>
                     <div th:errors="*{email}"
                          class="text-sm text-destructive">
-                        <p>Password length must be between 2 and 15 symbols!</p>
+                        <p>Email error message</p>
                     </div>
                 </div>
             </div>
@@ -49,7 +49,7 @@
                           required></textarea>
                 <div th:errors="*{message}"
                      class="text-sm text-destructive">
-                    <p>Password length must be between 2 and 15 symbols!</p>
+                    <p>Message error message</p>
                 </div>
             </div>
             <div class="flex justify-start">
