--- a/taskmaster/src/main/resources/templates/login.html
+++ b/taskmaster/src/main/resources/templates/login.html
@@ -7,28 +7,30 @@
         <h2 th:text="#{login_label}" class="text-2xl font-bold text-primary text-center mb-6">Login</h2>
         <form th:method="post" th:action="@{/users/login}">
             <div class="mb-4">
-                <label th:text="#{username_label}" for="username" class="block text-sm font-medium text-primary">Username</label>
+                <label th:text="#{username_label}" for="username" class="block text-sm font-medium text-primary">
+                    Username
+                </label>
                 <input th:value="${username}"
-                       type="text"
-                       id="username"
-                       name="username"
+                       type="text" id="username" name="username"
                        th:placeholder="#{username_placeholder}"
-                       class="w-full px-3 py-2 mt-1 text-primary  border border-primary rounded-md focus:outline-none focus:ring focus:ring-primary"
-                />
+                       class="w-full px-3 py-2 mt-1 text-primary  border border-primary
+                       rounded-md focus:outline-none focus:ring focus:ring-primary"/>
             </div>
             <div class="mb-6">
-                <label th:text="#{password_label}" for="password" class="block text-sm font-medium text-primary">Password</label>
+                <label th:text="#{password_label}" for="password" class="block text-sm font-medium text-primary">
+                    Password
+                </label>
                 <input
                         type="password"
-                        id="password"
-                        name="password"
+                        id="password" name="password"
                         th:placeholder="#{password_placeholder}"
-                        class="w-full px-3 py-2 mt-1 text-primary  border border-primary rounded-md focus:outline-none focus:ring focus:ring-primary"
-                />
+                        class="w-full px-3 py-2 mt-1 text-primary  border border-primary rounded-md
+                         focus:outline-none focus:ring focus:ring-primary"/>
             </div>
             <button type="submit"
                     th:text="#{login_label}"
-                    class="w-full bg-primary text-primary-foreground p-3 rounded-md hover:bg-primary/80 focus:outline-none focus:ring focus:ring-primary">
+                    class="w-full bg-primary text-primary-foreground p-3 rounded-md
+                     hover:bg-primary/80 focus:outline-none focus:ring focus:ring-primary">
                 Login
             </button>
         </form>
@@ -37,7 +39,5 @@
         </div>
     </div>
 </div>
-
-
 </body>
 </html>
