--- a/taskmaster/src/main/resources/templates/login.html
+++ b/taskmaster/src/main/resources/templates/login.html
@@ -3,7 +3,7 @@
 <body>
 <form th:replace="~{/fragments/language::language(true)}"></form>
 <div class="bg-blue-500 min-h-screen flex items-center justify-center bg-background dark:bg-black">
-    <div class="bg-card dark:bg-card-foreground rounded-lg shadow-lg p-8 max-w-sm w-full">
+    <div class="bg-card dark:bg-card-foreground rounded-lg shadow-lg p-8 pb-2 max-w-sm w-full">
         <h2 th:text="#{login_label}" class="text-2xl font-bold text-primary text-center mb-6">Login</h2>
         <form th:method="post" th:action="@{/users/login}">
             <div class="mb-4">
@@ -33,6 +33,10 @@
                      hover:bg-primary/80 focus:outline-none focus:ring focus:ring-primary">
                 Login
             </button>
+            <p class="text-muted-foreground text-sm mt-4">
+                Don't have an account?
+                <a th:href="@{/users/register}" class="text-black hover:text-gray-600">Register</a>
+            </p>
         </form>
         <div th:if="${hasError}" th:text="#{login_bad_credential}" class="text-center text-lg text-destructive ">
             <p>Incorrect username or password!</p>
