Check tests and names in mail-sender api.

--- a/taskmaster/src/main/resources/templates/about.html
+++ b/taskmaster/src/main/resources/templates/about.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{/fragments/head::head}"></head>
-<body >
+<body>
 <nav th:replace="~{/fragments/navigation::nav}"></nav>
 <div class=" mr-10 ml-10 text-primary-foreground min-h-screen flex flex-col items-center justify-center p-4">
-    <!--    <img class="w-24 h-24 mb-4" src="https://placehold.co/150?text=📅" alt="planner-icon" />-->
     <main class="text-center container mx-auto pr-6 pl-6">
         <h1 class=" text-4xl mb-4 text-black">About Us</h1>
         <section class="text-black mb-6">
@@ -28,7 +27,7 @@
             <p class="mb-4">
                 With Planner App, customization is key. You can personalize your experience by choosing from a range of
                 themes and layouts that suit your style. Our user-friendly interface is designed to be accessible to
-                everyone, regardless of their tech-savviness.
+                everyone, regardless of their tech-heaviness.
             </p>
             <p class="mb-4">
                 Security and privacy are our top priorities. We implement robust security measures to protect your data
@@ -46,10 +45,10 @@
             </p>
         </section>
 
-<!--        <section class="mb-6">-->
-<!--            <img src="/images/about" alt="Planner App Screenshot"-->
-<!--                 class="rounded-lg shadow-md w-full">-->
-<!--        </section>-->
+        <!--        <section class="mb-6">-->
+        <!--            <img src="/images/about" alt="Planner App Screenshot"-->
+        <!--                 class="rounded-lg shadow-md w-full">-->
+        <!--        </section>-->
     </main>
 </div>
 <footer th:replace="~{/fragments/footer::footer}"></footer>
