--- a/taskmaster/src/main/resources/templates/home.html
+++ b/taskmaster/src/main/resources/templates/home.html
@@ -155,7 +155,7 @@
         </section>
     </main>
     <div class="flex gap-8">
-        <a th:href="@{/tasks/add-task}"
+        <a th:href="@{/tasks/add}"
            class="add-task-btn bg-primary text-primary-foreground py-2 px-4 mt-8 rounded-lg shadow-md hover:bg-primary/80">
             Add New
             Task
